fix(Modal): fixing scrolling and z-index issues on mobile devices

--- a/src/stylesheets/_entries/disputes/show.css
+++ b/src/stylesheets/_entries/disputes/show.css
@@ -82,9 +82,7 @@ fieldset {
 }
 
 .save-for-later {
-  position: fixed;
-  top: 2.3rem;
-  right: 5rem;
+  background: white;
 }
 
 /* process */
